--- a/frontend/astro-app/src/components/Navbar.astro
+++ b/frontend/astro-app/src/components/Navbar.astro
@@ -1,5 +1,5 @@
 ---
-const plaformName = "Learning DZ";
+const platformName = "DevLevelUp";
 const categories = [
   { name: "Frontend", href: "/courses/frontend" },
   { name: "Backend", href: "/courses/backend" },
@@ -15,7 +15,7 @@ const categories = [
   <!-- Logo -->
   <div class="flex items-center gap-2">
     <img src="/logo.svg" width={32} alt="Logo" />
-    <span class="text-gray-800 font-bold text-xl">{plaformName}</span>
+    <span class="text-gray-800 font-bold text-xl cursor-pointer" onclick="window.location.href='/'">{platformName}</span>
   </div>
   <div></div>
   <div></div>
@@ -53,10 +53,7 @@ const categories = [
        </div>
      
        <div class="flex items-center gap-3">
-         <a href="/login"
-            class="border border-gray-200 bg-orange-100 text-gray-800 px-4 py-2 rounded-lg hover:bg-orange-200 transition">
-           Log In
-         </a>
+        
          <a onclick="window.location.href='http://localhost:5173/signup'"
 
             class="bg-orange-500 text-white px-4 py-2 rounded-lg hover:bg-orange-600 transition">
