--- a/frontend/astro-app/src/components/Navbar.astro
+++ b/frontend/astro-app/src/components/Navbar.astro
@@ -53,8 +53,8 @@ const categories = [
        </div>
      
        <div class="flex items-center gap-3">
-        
-         <a onclick="window.location.href='http://localhost:5173/signup'"
+
+         <a onclick="window.location.href='https://dashboarddevlevelup.vercel.app/signup'"
 
             class="bg-orange-500 cursor-pointer  text-white px-4 py-2 rounded-2xl hover:bg-orange-600 transition">
            Sign Up
